# mctui

./: .gitignore  Cargo.toml  README.md
mc_core/: Cargo.toml
mc_core/src/: account.rs  download.rs  lib.rs  statue.rs
mc_core/src/account/: base.rs  offline_account.rs
mc_core/src/download/: download_event.rs  download_pool.rs  download_url.rs  single_downloader.rs
mc_core/src/install/: minecraft.rs
mc_core/src/install/minecraft/: version_manifest.rs
tui/: Cargo.toml
tui/locales/: zh-cn.toml
tui/src/: api.rs  data.rs  event.rs  lib.rs  log.rs  main.rs  ui.rs
tui/src/data/: account.rs  account_data.rs  download.rs  download_data.rs  game_data.rs  modpacks_config.rs
tui/src/ui/: download.rs  menu.rs  stacked.rs  ui_account_manage.rs  ui_download.rs  ui_game.rs  ui_modpack_manage.rs  ui_setting.rs
