[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
rust-i18n = "3.1.5"
rfd = "=0.16.0"
ratatui = "0.29.0"
tui-input = { version = "0.14.0", features = ["crossterm"], default-features = false }
tui-logger = "0.17.4"

mc_core = {path = "../mc_core"}

anyhow = {workspace = true}
directories = {workspace = true}
toml = {workspace = true}
serde = {workspace = true}
log = {workspace = true}
chrono = {workspace = true}