[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
rust-i18n = "3.1.5"
rfd = "=0.16.0"
ratatui-core = "0.1.0"
ratatui-crossterm = "0.1.0"
rat-salsa = "4.0.1"
rat-event = "2.0.2"
rat-widget = "3.0.2"
rat-theme4 = "4.5.1"
rat-menu = "3.0.1"
ratatui-widgets = "=0.3.0"

mc_core = {path = "../mc_core"}

anyhow = {workspace = true}
directories = {workspace = true}
toml = {workspace = true}
serde = {workspace = true}
log = {workspace = true}
chrono = {workspace = true}